Unfinished homework for the third week

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,6 +32,7 @@
         "sass/layout/adjustment.scss",
         "sass/components/section-header.scss",
         "sass/components/section-best.scss",
+        "sass/components/section-slider.scss",
         "sass/components/section-team.scss",
         "sass/components/section-menu.scss",
         "sass/components/section-comments.scss",
